--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
