--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
+    "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.21.1"
   },
