--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.0.0",
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
