--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^2.0.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
